--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="center">
       <center>
-        <h1>ZUVAX/h1>
+        <h1>ZUVAX</h1>
       </center>
       <br>
     </div>
