--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="language" content="En">
     <title>ZUVAX</title>
+    <style type="text/css">
+      @import url("style.css");
+    </style>
   </head>
 
   <body>
