Changing website, adding scroll animated

--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
   </head>
 
   <body>
-    <div class="center">
-      <center>
-        <h1>ZUVAX</h1>
-      </center>
-      <br>
+    <div id="scroll-animate">
+      <div id="scroll-animate-main">
+        <div class="wrapper-parallax">
+          <header>
+            <h1>Header</h1>
+          </header>
+
+          <section class="content">
+            <h1>Content</h1>
+          </section>
+
+          <footer>
+            <h1>Footer</h1>
+          </footer>
+        </div>
+      </div>
     </div>
   </body>
   </html>
