--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
     <meta charset="utf-8">
     <meta name="language" content="En">
     <title>ZUVAX</title>
-    <style type="text/css">
-      @import url("style.css");
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
     <div id="scroll-animate">
       <div id="scroll-animate-main">
         <div class="wrapper-parallax">
           <header>
-            <h1>Header</h1>
+            <h1>Zuvax</h1>
           </header>
 
           <section class="content">
-            <h1>Content</h1>
+            <h1>Informations</h1>
           </section>
 
           <footer>
-            <h1>Footer</h1>
+            <h1>More</h1>
           </footer>
         </div>
       </div>
     </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script src="scripts/scroll.js"></script>
   </body>
   </html>
